--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>TestJavaApp</groupId>
-  <artifactId>TestJavaApp</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>com.test.app</name>
-  <description>Test-JavaApp</description>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.test.app</groupId>
+	<artifactId>TestJavaApp</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>TestJavaApp Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	
   <properties>
 		<spring.version>4.0.1.RELEASE</spring.version>
 		<spring.security.version>4.0.1.RELEASE</spring.security.version>
+		<java.version>1.8</java.version>
 	</properties>
   
   <dependencies>
@@ -35,18 +38,41 @@
 		<artifactId>spring-webmvc</artifactId>
 		<version>${spring.version}</version>
 	</dependency>
-    
   </dependencies>
+  
   <build>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+       <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+        </plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-war-plugin</artifactId>
+			    <version>3.3.1</version>
+			    <configuration>
+			        <failOnMissingWebXml>false</failOnMissingWebXml>    
+			    </configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.eclipse.jetty</groupId>
+			    <artifactId>jetty-maven-plugin</artifactId>
+			    <version>11.0.8</version>
+			    <!-- <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <httpConnector>
+                        <port>9998</port>
+                    </httpConnector>
+                    <webApp>
+                        <contextPath>/dtvsonline</contextPath>
+                    </webApp>
+                </configuration> -->
+			</plugin>
     </plugins>
   </build>
 </project>
